<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/update_mothed"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/update_bk">
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="40px"
        android:layout_marginRight="40px"
        android:layout_marginTop="60px">

        <TextView  
            android:id="@+id/text" 
            android:layout_width="fill_parent" 
            android:layout_height="wrap_content"
            android:textColor="@color/white_color"
            android:textSize="20dp"
            android:text="@string/mothed_tip"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="100px"
        android:orientation="horizontal">

        <Button 
            android:id="@+id/upgrade" 
            android:layout_width="100dp" 
            android:layout_height="wrap_content" 
            android:background="@drawable/button"
            android:text="@string/upgrade"
            android:textColor="@color/white_color"
            android:textSize="20dp"/> 
        <Button 
            android:id="@+id/patch" 
            android:layout_width="100dp" 
            android:layout_height="wrap_content" 
            android:background="@drawable/button"
            android:text="@string/patch"
            android:textColor="@color/white_color"
            android:textSize="20dp"
            android:layout_marginLeft="20px"/> 
    </LinearLayout>
</LinearLayout>
